--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -25,7 +26,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-	"cache": false,
     "extends": [
       "react-app",
       "react-app/jest"
